# empo

./: .dockerignore  .env.example  .gitattributes  .gitignore  .ruff.toml  =1.2.0  CONTRIBUTING.md  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  SUMMARY.md  TRANSPORT_ENVIRONMENT.md  VENDOR.md  debug_aux.py  debug_aux2.py  debug_aux3.py  debug_aux4.py  debug_nowarmup.py  diamond_dag  docker-compose.cpu.yml  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  requirements-colab.txt  requirements-dev.txt  requirements-hierarchical.txt  requirements-kaggle.txt  requirements.txt  resources  test_archival_logging.py  test_async.py  test_docker_spawn.py  test_u_r_normalization.py  train.py
.devcontainer/: devcontainer.json
.devin/: wiki.json
.github/: copilot-instructions.md
bushworld_worlds/: two_humans_one_robot.yaml  two_humans_one_robot_7x3.yaml
configs/: default.yaml
docs/: ADAPTIVE_LEARNING.md  API.md  ARCHIVAL_MECHANISM.md  ATTAINMENT_CACHE_ANALYSIS.md  BACKWARD_COMPATIBILITY.md  BACKWARD_INDUCTION.md  BATCHED_COMPUTATION.md  BUSHWORLD.md  CLUSTER.md  CODE_STATS.md  CONTRIBUTING.md  CROSS_GRID_IMPLEMENTATION.md  DISK_SLICING.md  ENCODER_ARCHITECTURE.md  EXPLORATION.md  FAQ.md  IMPLEMENTATION.md  IMPLEMENTING_A_NEW_WORLDMODEL.md  ISSUES.md  LEARNING_RATES.md  PARALLELIZATION.md  PHASE2_LOSSES_AND_NETWORKS.md  PHASE2_TRAINING_DEEP_DIVE.md  PLASTICITY_DIAGNOSTICS.md  PREBUILT_IMAGES.md  QUICKSTART.md  SIMPLIFIED_X_H.md  SUMMARY.md  TRANSPORT_ENVIRONMENT.md  VALUE_TRANSFORMATIONS.md  VENDOR.md  VIDEO_CAPTURE_GUIDE.md  WARMUP_DESIGN.md
examples/: README.md  bellman_backward_induction.py  benchmark_get_dag.py  benchmark_parallel_dag.py  blocks_rocks_animation.py  control_button_demo.py  cooperative_puzzle_demo.py  cross_grid_policy_demo.py  dag_and_episode_example.py  dag_visualization_example.py  debug_value_function.py  heuristic_key_door_demo.py  heuristic_multigrid_ensemble_demo.py  human_policy_prior_example.py  llm_comparison.ipynb  llm_comparison.py  lookup_table_phase2_demo.py  magic_wall_demo.py  neural_policy_prior_demo.py  one_or_three_chambers_random_play.py  path_distance_visualization.py  phase2_backward_induction.py  phase2_robot_policy_demo.py  phi_network_ensemble_demo.py  policy_prior_transfer_demo.py  profile_transitions.py  random_ensemble_heuristic_exploration_demo.py  random_multigrid_ensemble_demo.py  rectangle_goal_demo.py  simple_example.py  simple_rock_push_demo.py  single_agent_value_function.py  state_management_demo.py  (+7 more)
(+580 files in other folders)
